# KUAF

./: .pre-commit-config.yaml  LICENSE  Makefile.am  README.md  README_EN.md  build.sh  configure.ac  dependence.xml  setup.sh
adapter/kuaf_comp/zlib_adapter/: Makefile
adapter/kuaf_comp/zlib_adapter/include/: deflate_adapter.h  inflate_adapter.h
adapter/kuaf_comp/zlib_adapter/src/: deflate_adapter.c  inflate_adapter.c
adapter/kuaf_crypto/: Makefile.am  configure.ac
adapter/kuaf_crypto/include/: kae_engine.h  rsa_hard.h  sm2_hard.h  uadk_async.h  uadk_engine.h
adapter/kuaf_crypto/src/: Makefile.am  e_kuaf.c  rsa_hard.c  sm2_hard.c
config/: kae.cnf  kuaf.cnf
docs/en/: api_reference.md  installation_guide.md  kuaf_menu.md  quick_start.md  release_notes.md
docs/zh/: api_reference.md  installation_guide.md  kuaf_menu.md  quick_start.md  release_notes.md
open_source/patch/: zlib-1.2.11.patch
package/: kuaf.spec  kuaf_pack.sh
src/: Makefile.am
src/common/: kuaf_config.c  kuaf_config.h  kuaf_log.c  kuaf_log.h
src/core/algorithm/: kuaf_alg.c  kuaf_alg.h
src/core/algorithm/comp/: kuaf_zlib.h
src/core/algorithm/crypto/: kuaf_rsa.h
src/core/device/: kuaf_dev.c  kuaf_dev.h
src/core/process/: kuaf_comp.c  kuaf_comp.h  kuaf_crypto.c  kuaf_crypto.h  kuaf_process.c  kuaf_process.h
src/core/scheduler/: kuaf_sc.c  kuaf_sc.h
src/core/strategy/: kuaf_shm.c  kuaf_shm.h  kuaf_stra.h
src/core/strategy/bandwidth/: kuaf_bw.c  kuaf_bw.h
src/core/strategy/parallel/: kuaf_paral.c  kuaf_paral.h
src/core/strategy/ratio/: kuaf_ratio.c  kuaf_ratio.h
test/: coverage.sh  kp_coverage.py
test/functest/: Makefile  rsa_func_test.c  sm2_func_test.c
test/fuzztest/: CMakeLists.txt  Makefile  ci_fuzz.cpp  kuaf_fuzz.cpp  ln-s.sh
test/gtest-download/: download.sh
test/perftest/crypto_perf/: Makefile  rsa_kae_test.c  sm2_kae_test.c
test/perftest/max_bw/: Makefile  max_bw.c
test/perftest/zlib_perf/: Makefile  kuafzip_perf.c
